...

    <string name="hello_world">Please enter your issues below</string>
    <string name="menu_settings">Settings</string>
    <string name="permission_content_provider_label">Read Secure CommCare Data</string>
    <string name="permission_content_provider_description">Allows this app to read data from CommCare while a user is logged in</string>
...
    <string name="permission_group_internal_action_label">Permission group for CommCare Internal Actions</string>

    <string name="title_activity_report_problem">Report Problem</string>
    <string name="panes">one</string>

...
    <string name="update_minor_mismatch" cc:translatable="true">Please update CommCare from the Google Playstore to update this application.</string>
    <string name="app_manager_advanced_settings_title">App Manager &gt; Advanced Settings</string>
    <string name="app_manager_advanced_settings_option">Advanced</string>
    <string name="app_manager_menu_about">About CommCare</string>
    <string name="app_manager_developer_options_title">App Manager &gt; Developer Options</string>
    <string name="app_manager_advanced_developer_options">Developer Options</string>
    <string name="app_manager_developer_options_enabled">CommCare Developer Mode Enabled</string>
    <string name="menu_app_list_install">See Apps for My User</string>
...
    <string name="clear_answer_no" cc:translatable="true">CANCEL</string>
    <string name="discard_answer" cc:translatable="true">REMOVE RESPONSE</string>
    <string name="discard_image" cc:translatable="true">Remove Image</string>
    <string name="do_not_exit" cc:translatable="true">STAY IN FORM</string>
    <string name="do_not_save" cc:translatable="true">EXIT WITHOUT SAVING</string>
    <string name="error_occured" cc:translatable="true">Error Occurred</string>
    <string name="file_invalid" cc:translatable="true">File: %s is invalid.</string>
    <string name="file_missing" cc:translatable="true">File: %s is missing.</string>
    <string name="get_location" cc:translatable="true">Record Location</string>
    <string name="invalid_answer_error" cc:translatable="true">Sorry, this response is invalid!</string>
    <string name="jump_to_beginning" cc:translatable="true">Go To Start</string>
    <string name="jump_to_end" cc:translatable="true">Go To End</string>
...
    <string name="quit_form_title" cc:translatable="true">Exit Form?</string>
    <string name="replace_location" cc:translatable="true">Replace Location</string>
    <string name="required_answer_error" cc:translatable="true">Sorry, this response is required!</string>
    <string name="review" cc:translatable="true">Continue</string>
    <string name="save_all_answers" cc:translatable="true">Save Form</string>
...
    <string name="form_entry_settings" cc:translatable="true">Change Settings</string>
    <string name="show_location" cc:translatable="true">Show Location</string>
    <string name="keep_changes" cc:translatable="true">SAVE INCOMPLETE</string>
    <string name="go_to_location" cc:translatable="true">Go to Location</string>
    <string name="font_size" cc:translatable="true">Text Font Size</string>
...
    <string name="connect_learn_cta_complete_assessment">Complete assessment</string>
    <string name="connect_learn_cta_take_assessment">Take assessment</string>
    <string name="connect_learn_cta_start">Start</string>

    <string name="connect_delivery_go">Go To App</string>
...
    </string-array>
    <string-array name="pref_enabled_labels">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
...
