...
            android:layout_centerVertical="true"
            android:padding="@dimen/content_min_margin"
            android:text="@string/hello_world"
            tools:context=".ReportProblemActivity"/>

        <EditText
            android:id="@+id/ReportText01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ReportPrompt01"
            android:gravity="top"
            android:hint="@string/your_comment"
            android:inputType="textMultiLine"
...
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ReportButton01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ReportText01"
            android:layout_centerHorizontal="true"
            android:text="Submit Report"/>

    </RelativeLayout>
</ScrollView>

