<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_view"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    tools:viewBindingIgnore="true"/>