<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:viewBindingIgnore="true">

    <ImageView
        android:id="@+id/hev_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingEnd="16dp" />

    <TextView
        android:id="@+id/hev_primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_toRightOf="@id/hev_icon"
        android:textColor="@color/cc_dark_warm_accent_text"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:paddingBottom="8dp"
        android:layout_toEndOf="@id/hev_icon" />

    <TextView
        android:id="@+id/hev_secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_toRightOf="@id/hev_icon"
        android:layout_below="@id/hev_primary_text"
        android:textColor="@color/cc_dark_warm_accent_text"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_toEndOf="@id/hev_icon" />
</RelativeLayout>