<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_update"
        android:title="Update App"
        android:icon="@android:drawable/ic_menu_upload" />

    <item
        android:id="@+id/menu_saved_forms"
        android:title="Saved Forms"
        android:icon="@android:drawable/ic_menu_save" />
...
