...
    <ListPreference
        android:enabled="true"
        android:defaultValue="release"
        android:entries="@array/update_target_labels"
        android:entryValues="@array/update_target_vals"
        android:key="cc-update-target"
        android:title="Update Options"/>
    <ListPreference
        android:enabled="true"
        android:defaultValue="always_hidden"
        android:entries="@array/pref_password_show_options_labels"
        android:entryValues="@array/pref_password_show_options"
        android:key="cc-password-entry-show-behavior"
...
