...
    <androidx.preference.ListPreference
        android:defaultValue="no"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-show-update-target-options"
        android:title="Show Update Options Item"/>
    <androidx.preference.ListPreference
        android:defaultValue="yes"
        android:enabled="true"
        android:entries="@array/pref_enabled_labels"
        android:entryValues="@array/pref_enabled_vals"
        android:key="cc-action-nav-enabled"
...
